--- a/app/src/main/res/layout/act_map.xml
+++ b/app/src/main/res/layout/act_map.xml
@@ -1,36 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/white"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white">
 
-    <include layout="@layout/topbar_common_itt"/>
+    <include
+        android:id="@+id/topbar"
+        layout="@layout/topbar_common_itt"/>
 
-    <TextView
-        android:id="@+id/tv_time"
+    <LinearLayout
+        android:id="@+id/layout_time"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:drawableLeft="@mipmap/ic_launcher"
-        android:drawablePadding="10dp"
-        android:gravity="center_vertical"
-        android:padding="5dp"
-        android:paddingLeft="5dp"
-        android:textSize="@dimen/common_textSize_default14"/>
+        android:layout_below="@+id/topbar"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_address"
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="49dp"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/tv_time"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="时间:"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/common_textSize_default14"/>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_alignParentRight="true"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:textSize="@dimen/common_textSize_default14"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_address"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:drawableLeft="@mipmap/ic_launcher"
-        android:drawablePadding="5dp"
-        android:gravity="center_vertical"
-        android:padding="5dp"
-        android:paddingLeft="10dp"
-        android:textSize="@dimen/common_textSize_default14"/>
+        android:layout_below="@+id/layout_time"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="49dp"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/tv_time"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="地点:"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/common_textSize_default14"/>
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:layout_alignParentRight="true"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:textSize="@dimen/common_textSize_default14"/>
+    </LinearLayout>
 
     <com.amap.api.maps2d.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_address"/>
+</RelativeLayout>
