--- a/app/src/main/res/layout/act_usermain.xml
+++ b/app/src/main/res/layout/act_usermain.xml
@@ -1,33 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <include layout="@layout/topbar_common_itt"/>
 
     <include layout="@layout/topbar_umain_ss"/>
 
-    <RelativeLayout
+    <com.yvision.widget.RefreshAndLoadListView
+        android:id="@+id/UserList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:id="@+id/layout_list"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@+id/title"
-            android:layout_marginBottom="50dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical" >
+    </com.yvision.widget.RefreshAndLoadListView>
+    <!--<include layout="@layout/bottombar_umain"/>-->
 
-            <com.yvision.widget.RefreshAndLoadListView
-                android:id="@+id/UserList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            </com.yvision.widget.RefreshAndLoadListView>
-        </LinearLayout>
-
-        <include layout="@layout/bottombar_umain"/>
-
-    </RelativeLayout>
 </LinearLayout>
